...
        android:layout_marginTop="45dp"
        android:src="@drawable/profile_image"
        app:civ_border_width="5dp"
        app:civ_border_color="@color/colorPrimary"/>

    <EditText
        android:id="@+id/set_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_image"
        android:inputType="textMultiLine"
        android:hint="username"
        android:textAlignment="center"
        android:drawableStart="@drawable/edit_profile"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:background="@drawable/inputs"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp">
    </EditText>

    <EditText
        android:id="@+id/set_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_username"
        android:inputType="textMultiLine"
        android:hint="I'm online"
        android:textAlignment="center"
...
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:layout_marginTop="10dp">
    </EditText>

    <Button
        android:id="@+id/update_profile_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_profile_status"
        android:inputType="textMultiLine"
        android:text="Update"
        android:textAlignment="center"
...
